2002-03-28  Cristy  <cristy@mystic.es.dupont.com>
  * DCM patches provided by Syam Gadde.
  * Multi-frame MPC image files caused a fault under Windows.
  * Copy entire comment from SVG (bug report from Bob Friesenhahn).

2002-03-27  Cristy  <cristy@mystic.es.dupont.com>
  * ImageMagick, version 5.4.4, released.

2002-03-26  Bob Friesenhahn <bfriesen@simple.dallas.tx.us>
  * Added preliminary version of C API for vector drawing commands
    (draw.h & draw.c).  This interface is subject to change, and has not
    even been tested yet so it should not be used to support production
    code.  The previous draw.h and draw.c have been renamed to render.h
    and render.c respectively.

2002-03-25  Leonard Rosenthol  <leonardr@lazerware.com>
  * Fixed bugs related to layered CMYK PSD images.

2002-03-13  Leonard Rosenthol  <leonardr@lazerware.com>
  * PSD coder now saves layer information (name, offset & opacity)
    in hidden attributes.

2002-03-13  Cristy  <cristy@mystic.es.dupont.com>
  * Enhanced MPC to read/write image sequences.

2002-03-13  Cristy  <cristy@mystic.es.dupont.com>
  * A number of formats (e.g. JPEG, PS) did not handle DirectClass
    grayscale images properly.

2002-03-12  Cristy  <cristy@mystic.es.dupont.com>
  * Changed Clone*Info() API so structure members are set directly rather
    than by the *clone=*info method (suggested by William Radcliffe).

2002-03-11  Cristy  <cristy@mystic.es.dupont.com>
  * Added AcquireString() to allocate read-only strings.

2002-03-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * coders/null.c (WriteNULLImage): Support writing "null:" image type
    for use when profiling or testing ImageMagick.

2002-03-08 Bob Friesenhahn <bfriesen@simple.dallas.tx.us>
  * Update to Autoconf 2.53 (new release)
  * Update to Automake 1.6 (new release)

2002-03-07  Cristy  <cristy@mystic.es.dupont.com>
  * Bob Friesenhahn's execution profile results in a number of speed-ups