@@ -2,6 +2,8 @@
   * DCM patches provided by Syam Gadde.
   * Multi-frame MPC image files caused a fault under Windows.
   * Copy entire comment from SVG (bug report from Bob Friesenhahn).
+  * Enlarged scanline buffer for JPEG-compressed TIFF's (bug report from
+    Bob Friesenhahn).
 
 2002-03-27  Cristy  <cristy@mystic.es.dupont.com>
   * ImageMagick, version 5.4.4, released.
